main/src/main/java/com/example/main/exception/errors/InvalidRequestException.java
package com.example.main.exception.errors;

public class InvalidRequestException extends RuntimeException {
    public InvalidRequestException(String message) {
        super(message);
    }
}